# Procesamiento-Se-ales-2024-2

./: Consulta.md  Ejercicio1.ipynb  Ejercicio2.ipynb  Ejercicio3.ipynb  Ejercicio4.ipynb  pyproject.toml
